@@ -1,99 +1,92 @@
 package ui.screen;
 
+import exceptions.InvalidFormatFieldException;
+import exceptions.RequiredFieldException;
+
 /**
  * Utilitário estático para validação e conversão de entradas do usuário.
  *
- * Centraliza a lógica de parsing que é usada diretamente pelos menus
- * para validar e converter entradas do usuário antes de processá-las.
+ * Centraliza a lógica de parsing que é usada pelos menus para validar
+ * e converter entradas do usuário antes de processá-las.
  *
- * Toda validação é feita caractere a caractere, sem regex e sem try/catch.
- * Responsabilidade única: transformar strings brutas de entrada em valores
- * primitivos seguros, ou sinalizar entrada inválida via valores sentinela
- * definidos internamente na classe (como INVALID_INT e INVALID_DOUBLE).
+ * Política de Etapa 3:
+ *  - Os métodos {@link #parseInt(String, String)} e {@link #parseDouble(String, String)}
+ *    capturam {@link NumberFormatException} internamente e relançam como exceções
+ *    da hierarquia do FitManager — {@link RequiredFieldException} para entrada vazia
+ *    ou {@link InvalidFormatFieldException} para formato inválido. Assim, qualquer
+ *    falha de conversão sobe pela cadeia até o {@code catch (FitManagerException e)}
+ *    do menu, sem precisar de checagens de valor sentinela espalhadas.
+ *  - O método {@link #isNumeric(String)} permanece como uma checagem booleana,
+ *    usada apenas para validar opções de seleção em menus (onde o "não é número"
+ *    não é uma falha de domínio, e sim uma decisão de fluxo).
  */
-public class InputParser {
+public final class InputParser {
 
-    public static final int INVALID_INT = -1;
-    public static final double INVALID_DOUBLE = -1.0;
+    private InputParser() {
+        // Classe utilitária — não deve ser instanciada.
+    }
 
     /**
-     * Verifica se uma string representa um número inteiro não-negativo.
-     * Percorre caractere a caractere — sem regex e sem try/catch.
+     * Verifica se uma string representa um número inteiro válido.
+     * Não lança exceção — retorna apenas {@code true} ou {@code false}.
      *
-     * @param value string a verificar (pode ter espaços nas bordas)
-     * @return true se contiver apenas dígitos e não for vazia
+     * Uso típico: validação de opção numérica em menus, onde uma entrada
+     * inválida apenas exibe a mensagem "Opção inválida" e repete o menu.
+     *
+     * @param value string a verificar (pode conter espaços nas bordas)
+     * @return {@code true} se {@code value} pode ser convertido para int
      */
     public static boolean isNumeric(String value) {
-        if (value == null || value.trim().isEmpty()) {
+        if (value == null || value.isBlank()) {
             return false;
         }
-        String trimmed = value.trim();
-        for (int i = 0; i < trimmed.length(); i++) {
-            char c = trimmed.charAt(i);
-            if (c < '0' || c > '9') {
-                return false;
-            }
-        }
-        return true;
-    }
-
-    /**
-     * Verifica se uma string representa um número decimal válido.
-     * Aceita dígitos e no máximo um ponto como separador decimal.
-     * Percorre caractere a caractere — sem regex e sem try/catch.
-     *
-     * @param value string já normalizada (vírgula já substituída por ponto)
-     * @return true se for um decimal válido (ex: "99.90", "100", "0.5")
-     */
-    public static boolean isDecimal(String value) {
-        if (value == null || value.trim().isEmpty()) {
+        try {
+            Integer.parseInt(value.trim());
+            return true;
+        } catch (NumberFormatException e) {
             return false;
         }
-        String trimmed = value.trim();
-        int dotCount = 0;
-        for (int i = 0; i < trimmed.length(); i++) {
-            char c = trimmed.charAt(i);
-            if (c == '.') {
-                dotCount++;
-                if (dotCount > 1) return false;
-            } else if (c < '0' || c > '9') {
-                return false;
-            }
-        }
-        // Rejeita string que é só "." sem nenhum dígito
-        return !trimmed.equals(".");
     }
 
     /**
-     * Converte uma string em inteiro de forma segura.
-     * Retorna INVALID_INT se a string for nula, vazia ou não numérica.
+     * Converte uma string em inteiro.
      *
-     * @param value string a converter
-     * @return valor inteiro, ou INVALID_INT se inválido
+     * @param value     string a converter
+     * @param fieldName nome do campo (usado na mensagem da exceção)
+     * @return valor inteiro convertido
+     * @throws RequiredFieldException       se {@code value} for nulo ou vazio
+     * @throws InvalidFormatFieldException  se {@code value} não representar um inteiro válido
      */
-    public static int parseIntSafe(String value) {
-        if (!isNumeric(value)) {
-            return INVALID_INT;
+    public static int parseInt(String value, String fieldName) {
+        if (value == null || value.isBlank()) {
+            throw new RequiredFieldException(fieldName);
         }
-        return Integer.parseInt(value.trim());
+        try {
+            return Integer.parseInt(value.trim());
+        } catch (NumberFormatException e) {
+            throw new InvalidFormatFieldException(fieldName, "Número inteiro");
+        }
     }
 
     /**
-     * Converte uma string em double de forma segura.
-     * Aceita vírgula como separador decimal.
-     * Retorna INVALID_DOUBLE se a string for nula, vazia ou não numérica.
+     * Converte uma string em double.
+     * Aceita vírgula como separador decimal (padrão pt-BR) e ponto.
      *
-     * @param value string a converter
-     * @return valor double, ou INVALID_DOUBLE se inválido
+     * @param value     string a converter
+     * @param fieldName nome do campo (usado na mensagem da exceção)
+     * @return valor decimal convertido
+     * @throws RequiredFieldException       se {@code value} for nulo ou vazio
+     * @throws InvalidFormatFieldException  se {@code value} não representar um decimal válido
      */
-    public static double parseDoubleSafe(String value) {
-        if (value == null) {
-            return INVALID_DOUBLE;
+    public static double parseDouble(String value, String fieldName) {
+        if (value == null || value.isBlank()) {
+            throw new RequiredFieldException(fieldName);
         }
         String normalized = value.trim().replace(",", ".");
-        if (!isDecimal(normalized)) {
-            return INVALID_DOUBLE;
+        try {
+            return Double.parseDouble(normalized);
+        } catch (NumberFormatException e) {
+            throw new InvalidFormatFieldException(fieldName, "Número decimal (ex.: 99,90)");
         }
-        return Double.parseDouble(normalized);
     }
 }
